# ws-desktop

./: .gitignore  build.bat  create-ico.ps1  create-ico2.ps1  create_ico.py  dev.bat  generate-icons.ps1  package-lock.json  package.json  setup.bat  test_popup.html
.trae/rules/: change_checklist.md  feature_list.md  personal_rules.md  project_rules.md
src/: context.html  index.html  popup.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
