[package]
name = "ws-monitor-desktop"
version = "1.0.0"
description = "WebSocket消息监控桌面版"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["rustls-tls"] }
clipboard-rs = "0.3.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
